# poly_arb_trader

./: .gitignore  Cargo.toml  DESIGN_DATABENTO_COLLECTOR.md  DESIGN_ETH_FAIR_MODEL.md  DESIGN_EXECUTION.md  DESIGN_FAIR_MODEL.md  DESIGN_FAIR_RIDE.md  DESIGN_MULTI_VENUE.md  DESIGN_TRADING_SYSTEM.md  POLYMARKET_VENUE_FINDINGS.md  SETUP_DATABENTO.md  SETUP_POLYMARKET.md  SETUP_POLYMARKET_US.md
app/: Cargo.toml
app/src/: config.rs  lib.rs  main.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs
crates/collector-binance/: Cargo.toml
crates/collector-binance/src/: book.rs  collector.rs  lib.rs
crates/collector-cryptospot/: Cargo.toml
crates/collector-cryptospot/src/: collector.rs  lib.rs
crates/collector-databento/: Cargo.toml
crates/collector-databento/src/: collector.rs  lib.rs
crates/collector-kalshi/: Cargo.toml
crates/collector-kalshi/src/: auth.rs  book.rs  collector.rs  lib.rs
crates/collector-polymarket/: Cargo.toml
crates/collector-polymarket/src/: book.rs  collector.rs  lib.rs  slug.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  event.rs  lib.rs  model.rs  module.rs
crates/executor/: Cargo.toml
crates/executor/src/: config.rs  lib.rs  mirror.rs  module.rs  position.rs  risk.rs  types.rs  venue.rs  venue_kalshi.rs  venue_spec.rs
crates/processor/: Cargo.toml
crates/processor/src/: calib.rs  fair.rs  lib.rs  module.rs  probe.rs  rule.rs  state.rs  window.rs
crates/processor/testdata/: fit_case.json  surface_vectors.json  surface_vectors_2p.json  surface_vectors_px2imb.json
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
models/: fair-2pband5-btc.json  fair-2pmom-cbbasis-btc.json  fair-2pmom-seqft1e3-btc.json  fair-2pmom-seqft3e3-btc.json  fair-cb-x60.json  fair-cbeth-x60.json  fair-eth-base-x60.json  fair-eth-imb1-x60.json  fair-imb1-x60.json  fair-l2base-x60.json  fair-mom-cbbasis-btc.json  fair-momonly-btc.json  fair-momvsurge-btc.json  fair-px2imb-btc.json  fair-px2imb-mom.json  fair-px2imb-momsurge.json  meta_cache_2026-07-10.json
scripts/: README.md  analyze_chase.py  analyze_hold.py  analyze_maker.py  btc_buckets.py  btc_compare_timeline.py  btc_event_timeline.py  btc_perp_vs_kalshi.py  btc_quote_vs_sweep.py  btc_sweep_timing.py  btc_trade_tape.py  databento_check_sym.py  databento_def_dump.py  databento_list_btc.py  databento_spread.py  databento_validate.py  hl_collect.py  hl_cond.py  hl_leadlag_test.py  kalshi_arb_study.py  kalshi_bps_sweep.py  kalshi_impulse.py  kalshi_leadlag_sources.py  kalshi_order_probe.py  leadlag_resolution.py  py_delta.py  sp_buckets.py  sp_cents.py  sp_event_study.py  sp_event_timeline.py  sp_implied_leadlag.py  sp_reaction_time.py  sp_timeline.py  tunnel.ps1  tunnel.sh
tools/: analyze_online.py  backfill_kxbtc.py  backfill_venues.py  compare_fair_ride.py  export_test_vectors.py  extract_imb1_fast.py  extract_l2_features.py  sim_50ms.py  sim_settle_hold.py  train_combo.py  train_fair_model.py  train_l2_imb.py  train_lead.py  train_venues.py
