[package]
name = "arb-collector-cryptospot"
version = "0.1.0"
edition = "2021"

[dependencies]
arb-core = { path = "../core" }
arb-bus = { path = "../bus" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
