[package]
name = "arb-collector-kalshi"
version = "0.1.0"
edition = "2021"

[lib]
name = "arb_collector_kalshi"
path = "src/lib.rs"

[dependencies]
arb-core = { path = "../core" }
arb-bus = { path = "../bus" }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
chrono = "0.4"
rsa = { version = "0.9", features = ["pem", "sha2"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
tracing-subscriber = { workspace = true }
serde_yaml = "0.9"
